<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/layout_height"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_color"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/verify_device_index"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recycler_view_text_size"
            android:text="@string/index"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/verify_device_status"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/recycler_view_text_size"
            android:text="@string/status"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/tv_device_sn"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/sn_number_demo"
            android:textSize="@dimen/recycler_view_text_size"
            />

        <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/split_color"
        />

        <TextView
            android:id="@+id/tv_device_types"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/model_type_demo"
            android:textSize="@dimen/recycler_view_text_size"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/tv_deivce_checkUnit"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/verify_company_demo"
            android:textSize="@dimen/recycler_view_text_size"

            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/tv_device_certificateNo"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/certificate_number_demo"
            android:textSize="@dimen/recycler_view_text_size"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

        <TextView
            android:id="@+id/tv_device_verifyDate"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:text="@string/validity_demo"
            android:textSize="@dimen/recycler_view_text_size"
            />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/split_color"
            />

    </LinearLayout>

</LinearLayout>