<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/splash_back"
    tools:context="verifysystem.company.com.verifysystem.activity.SplashActivity">

    <TextView
        android:id="@+id/verification_system"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:textSize="45sp"
        android:textColor="@android:color/white"
        android:text="@string/verification_system"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/copyright_descripti_en_tv"
        android:layout_alignStart="@+id/copyright_descripti_en_tv"
        android:layout_centerHorizontal="true"
        android:textColor="@color/mainBottomTextColor"
        android:textSize="@dimen/bottom_text_size"
        android:text="@string/guide_tech"
        />

    <TextView
        android:id="@+id/copyright_descripti_en_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        android:text="@string/guide_tech_english"
        android:textColor="@color/mainBottomTextColor"
        android:textSize="@dimen/bottom_small_text_size" />

</RelativeLayout>
