<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/first_line_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/about_device_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_device"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/device_model_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_toRightOf="@+id/about_device_tv"
                android:text="@string/machine_model"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/device_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_model_tv"
                android:layout_below="@+id/device_model_tv"
                android:layout_marginTop="@dimen/minimum_margin"
                android:text="@string/device_number"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/device_number_tv"
                android:layout_below="@+id/device_number_tv"
                android:layout_marginTop="@dimen/minimum_margin"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/contact_us_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_version"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/contact_us"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/phone_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/contact_us_tv"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_toRightOf="@+id/contact_us_tv"
                android:text="@string/phone"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

            <TextView
                android:id="@+id/address_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/phone_tv"
                android:layout_below="@+id/phone_tv"
                android:layout_marginTop="@dimen/minimum_margin"
                android:text="@string/address"
                android:textColor="@color/textWhiteColor"
                android:textSize="@dimen/about_text_size"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:minHeight="150dp"/>
            <TextView
                android:id="@+id/tv_mainId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textSize="@dimen/about_text_size"
                style="@style/text_normal_white"/>

        </LinearLayout>


</LinearLayout>
